--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -12,17 +12,18 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form>
+                <form action=" {%url 'enc:search'%}" method="post">
+                    {% csrf_token %}
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="{% url 'enc:index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'enc:create'%}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'enc:random' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
@@ -32,6 +33,7 @@
                 {% endblock %}
             </div>
         </div>
-
+    
     </body>
-</html>
+    
+    </html>
