--- a/wiki/encyclopedia/templates/encyclopedia/page.html
+++ b/wiki/encyclopedia/templates/encyclopedia/page.html
@@ -9,8 +9,8 @@ Encyclopedia
 {{ content|safe }}
 
 
-<p><a href="{% url 'enc:edit'%}"> Edit </a></p>
+<p><a href="{% url 'wikipedia:edit'%}"> Edit </a></p>
 
-<p><a href="{% url 'enc:index' %}"> Home page </a></p>
+<p><a href="{% url 'wikipedia:index' %}"> Home page </a></p>
 
 {% endblock %}
