--- a/wiki/encyclopedia/templates/encyclopedia/search.html
+++ b/wiki/encyclopedia/templates/encyclopedia/search.html
@@ -15,5 +15,5 @@ Encyclopedia
     <li> Page not found </li>
     {% endif %}
 </ul>
-<p><a href="{% url 'enc:index' %}"> Home page </a></p>
+<p><a href="{% url 'wikipedia:index' %}"> Home page </a></p>
 {% endblock %}
