--- a/wiki/encyclopedia/templates/encyclopedia/edit.html
+++ b/wiki/encyclopedia/templates/encyclopedia/edit.html
@@ -6,13 +6,13 @@
 
 {% block body %}
 <h3> Text editor: </h3>
-    <form action="{% url 'enc:edit' %}" method="post">
+    <form action="{% url 'wikipedia:edit' %}" method="post">
         {% csrf_token %}
 
         {{ form }}
 
         <p><input type="submit" value="Send"></p>
     </form>
-<p><a href="{% url 'enc:index' %}">Home page </a></p>
+<p><a href="{% url 'wikipedia:index' %}">Home page </a></p>
 
 {% endblock %}
