--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -12,18 +12,18 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form action=" {%url 'enc:search'%}" method="post">
+                <form action=" {%url 'wikipedia:search'%}" method="post">
                     {% csrf_token %}
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
-                    <a href="{% url 'enc:index' %}">Home</a>
+                    <a href="{% url 'wikipedia:index' %}">Home</a>
                 </div>
                 <div>
-                    <a href="{% url 'enc:create'%}">Create New Page</a>
+                    <a href="{% url 'wikipedia:create'%}">Create New Page</a>
                 </div>
                 <div>
-                    <a href="{% url 'enc:random' %}">Random Page</a>
+                    <a href="{% url 'wikipedia:random' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
